# BuildMan

./: CMakeLists.txt  README.md  main.cpp
include/: CMakeLists.txt
lib/: CMakeLists.txt  Makefile
src/: calc.cpp
